# WelineFramework

./: .cgcignore  .claudeignore  .cursorignore  .cursorrules  .dockerignore  .env.sample  .gitattributes  .gitignore  .gitnexusignore  .htaccess  .php-cs-fixer.dist.php  AGENTS.md  AI 提示词.md  AI 测试.md  AI 测试提示词.md  AI-ENTRY.md  AI-README.md  AI-常犯错误.md  AI-监督智能体.md  CLAUDE.md  COMMON_ERRORS.md  DEBUG_FUNCTIONS_README.md  DEBUG_GUIDE.md  DEBUG_OPTIMIZATION.md  Dockerfile  ERROR_LOG.md  FIXES_2026-03-30.md  FIXES_2026-04-07-INSTANCE-GATEWAY.md  FIXES_2026-04-07-JSON-CONCURRENT-WRITE.md  FIXES_2026-04-07-WLS-IPC-RECOVERY.md  MAINTENANCE_MODE_TEST.md  OK  PHP-Requirements.md  Pest.php  README.md  README.zh-CN.md  STARTUP_GUIDANCE_2026-04-07.md  STOCK_FIX_REPORT.md  USER.md  WARP.md  (+68 more)
.agents/: README.md
.claude/: settings.local.json
.comate/: mcp.json
.ctags.d/: code-intelligence.ctags
.openclaw/: workspace-state.json
.phpunit.cache/: test-results
.specify/: implementation-summary.md
.wls-trash/: 20260620-073518-80d5a61e8595-source-trash-queue-http-mqm1ki1n.md  20260620-073747-005d67513ff4-source-trash-queue-http-mqm1p7n1.md
agent-tools/: playing_index.html  playing_index_param.html  tmp_about_cny.html  watch-wls-errors.ps1
app/: autoload.php  bootstrap.php  bootstrap_phpunit.php
app/code/Weline/AutoLeadAgent/wasm/src/: CMakeLists.txt  README.md  agent_brain.cpp  agent_core.cpp  agent_core.h  binding.cpp  mcp_protocol.cpp
artifacts/: a2a-acl-source-registration-browser-2026-06-06-2333.json  a2a-acl-source-registration-http-2026-06-06-2333.html  a2a-actor-assignment-browser-2026-06-06-1933.json  a2a-actor-assignment-browser-click-2026-06-06-1933.json  a2a-actor-assignment-http-2026-06-06-1933.json  a2a-actor-assignment-provider-2026-06-06-1933.html  a2a-actor-binding-after-provider-2026-06-06-2003.html  a2a-actor-binding-bound-provider-2026-06-06-2003.html  a2a-actor-binding-browser-2026-06-06-2003.json  a2a-actor-binding-http-2026-06-06-2003.json  a2a-actor-binding-provider-2026-06-06-2003.html  a2a-actor-guard-browser-2026-06-06-2033.json  a2a-actor-identity-readiness-browser-2026-06-06-2233-r2.json  a2a-actor-identity-readiness-browser-2026-06-06-2233-r3.json  a2a-actor-identity-readiness-browser-2026-06-06-2233.json  a2a-arbitration-ruling-playwright-2026-06-06-1733.json  a2a-authenticated-acl-proof-arbitrator-2026-06-07-0033.json  a2a-authenticated-acl-proof-browser-2026-06-07-0033.json  a2a-authenticated-acl-proof-platform-2026-06-07-0033.json  a2a-authenticated-acl-proof-provider-2026-06-07-0033.json  a2a-authenticated-acl-proof-summary-2026-06-07-0033.json  a2a-backend-proof-entry-browser-2026-06-07-0003.json  a2a-backend-proof-entry-generated-url-2026-06-07-0003.html  a2a-backend-proof-entry-http-2026-06-07-0003.html  a2a-buyer-acceptance-decision-browser-2026-06-06-2133.json  a2a-delivery-submission-browser-2026-06-06-2103.json  (+29 more)
pub/: sql.txt  (+4 more)
(+21595 files in other folders)
